--- a/src/components/components/appsco-list-item-styles.html
+++ b/src/components/components/appsco-list-item-styles.html
@@ -1,6 +1,7 @@
 <link rel="import" href="../../../bower_components/polymer/polymer.html">
 <link rel="import" href="../../../bower_components/iron-flex-layout/iron-flex-layout.html">
 <link rel="import" href="../../../bower_components/paper-styles/typography.html">
+<link rel="import" href="../../../bower_components/paper-styles/shadow.html">
 
 <!-- shared styles for appsco-list-item components -->
 <dom-module id="appsco-list-item-styles">
