DASH-3668 [Frontend][Account] Download from Google Play and Apple Store buttons not showing

--- a/src/components/account/appsco-account-2fa-enable.html
+++ b/src/components/account/appsco-account-2fa-enable.html
@@ -264,7 +264,7 @@ Example:
                         AppsCo is using Google Authenticator which requires a second step of verification when you sign in.</p>
                     <div class="app-store-info flex-horizontal">
                         <iron-image class="google-authenticator-icon"
-                                    src="../../../images/twofa/google-authenticator-icon.png"
+                                    src="/images/twofa/google-authenticator-icon.png"
                                     sizing="cover"></iron-image>
 
                         <div class="store-info flex-vertical">
@@ -275,7 +275,7 @@ Example:
                                    tabindex="-1"
                                    target="_blank" rel="noopener noreferrer">
                                     <iron-image class="app-store-image"
-                                                src="../../../images/twofa/google-play-image.png"
+                                                src="/images/twofa/google-play-image.png"
                                                 sizing="cover"></iron-image>
                                 </a>
 
@@ -284,7 +284,7 @@ Example:
                                    tabindex="-1"
                                    target="_blank" rel="noopener noreferrer">
                                     <iron-image class="app-store-image apple-store-image"
-                                                src="../../../images/twofa/apple-store-image.png"
+                                                src="/images/twofa/apple-store-image.png"
                                                 sizing="cover"></iron-image>
                                 </a>
                             </div>
