--- a/src/components/account/appsco-account-log.html
+++ b/src/components/account/appsco-account-log.html
@@ -522,7 +522,7 @@ Custom property | Description | Default
                 return {
                     icon: 'icons:undo',
                     date: item.created_at.date,
-                    message: this.localize('account_log_application_revoked', 'application', item.data.application.title),
+                    message: this.localize('account_log_application_revoked', 'application', item.data.oauth_authorization.oauth_application.title),
                     address: item.ip
                 }
             },
