DASH-3736 [Frontend][Manage Customer] Modify the text on Customer subscription card

--- a/src/components/customer/appsco-customer-subscription-toggle.html
+++ b/src/components/customer/appsco-customer-subscription-toggle.html
@@ -40,7 +40,7 @@
             </template>
 
             <template is="dom-if" if="[[ _isSubscriptionPaidExternally  ]]">
-                <p>Customer has [[ customer.used_licences ]] licences currently.</p>
+                <p>Customer has [[ customer.used_licences ]] used licences currently.</p>
             </template>
         </div>
 
