--- a/src/components/customer/appsco-manage-customer-components-page.html
+++ b/src/components/customer/appsco-manage-customer-components-page.html
@@ -56,7 +56,7 @@
                                 Subscription is paid for the customer by partner.
                             </div>
                             <div class=subscription-paid-partner">
-                                Number of licenses: [[ customer.max_subscription_size ]]
+                                Number of licences: [[ customer.max_subscription_size ]]
                             </div>
                         </template>
                         <template is="dom-if" if="[[ !_isSubscriptionPaidExternally ]]">
@@ -66,7 +66,7 @@
                         </template>
                         <template is="dom-if" if="[[ _isSubscriptionPaidExternally ]]">
                             <div class="customer-used-licences">
-                                Customer has [[ customer.used_licences ]] licences currently.
+                                Customer has [[ customer.used_licences ]] used licences currently.
                             </div>
                         </template>
                     </div>
