--- a/src/components/customer/appsco-customer-partner-admins-page.html
+++ b/src/components/customer/appsco-customer-partner-admins-page.html
@@ -141,8 +141,8 @@
                 this.$.appscoCustomerPartnerAdmins.loadPartnerAdmins();
             },
 
-            addPartnerAdmins: function(partnerAdmins) {
-                this.$.appscoCustomerPartnerAdmins.addPartnerAdmins(partnerAdmins);
+            reloadPartnerAdmins: function() {
+                this.$.appscoCustomerPartnerAdmins.reloadPartnerAdmins();
             },
 
             removePartnerAdmins: function(partnerAdmins) {
