--- a/src/components/customer/appsco-manage-customer-components-page.html
+++ b/src/components/customer/appsco-manage-customer-components-page.html
@@ -183,8 +183,8 @@
                 this.set('customer', customer);
             },
 
-            addPartnerAdmins: function(partnerAdmins) {
-                this.$.appscoCustomerPartnerAdmins.addPartnerAdmins(partnerAdmins);
+            reloadPartnerAdmins: function() {
+                this.$.appscoCustomerPartnerAdmins.reloadPartnerAdmins();
             },
 
             removePartnerAdmins: function(partnerAdmins) {
